--- a/templates/dashboard/folder.html.twig
+++ b/templates/dashboard/folder.html.twig
@@ -7,15 +7,27 @@
         <div>
             <h3>
                 {% if current is defined %}
-                    {% if current.hasParent == 1 %}
-                        <a href="{{ path("folder", {"id" : current.parent.id}) }}">Powrót</a>
+                    {% if current == "mainFolder" %}
+                        folder główny
                     {% else %}
-                        <a href="{{ path("folder") }}">Powrót</a>
+                        {% if current.hasParent == 1 %}
+                            <a href="{{ path("folder", {"id" : current.parent.id}) }}">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+                                </svg>
+                            </a>
+                        {% else %}
+                            <a href="{{ path("folder") }}">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-left" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z"/>
+                                </svg>
+                            </a>
+                        {% endif %}
+                        /{{ current.folderName }}
                     {% endif %}
-                    /{{ current.folderName }}
                 {% else %}
                     /Główny
-                {% endif %}
+                    {% endif %}
             </h3>
 
             {{ form_start(form) }}
