--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,7 @@
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.css') }}">
             <link rel="stylesheet" href="{{ asset('assets/css/bootstrap.min.css') }}">
+            <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
         {% endblock %}
 
         {% block javascripts %}
@@ -75,7 +76,39 @@
         {% endblock %}
     </div>
     <div id="foot">
-
     </div>
+
+    <div id="modal" class="modal" style="background: rgba(0,0,0,0.3)">
+        <div class="modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="close btn btn-outline-dark" data-dismiss="modal" aria-label="Close">X</button>
+                </div>
+                <div class="modal-body">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-send="modal">Zapisz</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Zamknij</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script>
+        document.addEventListener("DOMContentLoaded", function (){
+          const modal = document.querySelector("#modal");
+          const closeBtn = modal.querySelectorAll('[data-dismiss="modal"]');
+          const body = modal.querySelector(".modal-body");
+
+          for(let i =0; i < closeBtn.length; i++){
+              closeBtn[i].addEventListener("click", function (){
+                  modal.style.display = "none";
+                  body.innerHTML = "";
+              })
+          }
+        })
+    </script>
+    {% block script %}
+    {% endblock %}
     </body>
 </html>
